@@ -138,15 +138,13 @@ Ty_const        Ty_ConstUInt   (Ty_ty ty, uint32_t u);
 Ty_const        Ty_ConstFloat  (Ty_ty ty, double   f);
 Ty_const        Ty_ConstString (Ty_ty ty, string   s);
 
-void            Ty_print(Ty_ty t);
-
 int             Ty_size(Ty_ty t);
 void            Ty_computeSize(Ty_ty ty);
 
 void            Ty_defineRange(Ty_ty ty, char lstart, char lend);
 Ty_ty           Ty_inferType(string varname);
 string          Ty_removeTypeSuffix(string varname);
-string          Ty_name(Ty_ty t);
+string          Ty_toString(Ty_ty t); // debugging purposes only!
 
 bool            Ty_isInt(Ty_ty t);
 
